--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,5 @@
 @import "base/normalize";
-@import "pages/mainPage.scss";
+@import "elements/mainPage.scss";
+@import "elements/app__title-block.scss";
+@import "elements/todolist__block.scss";
+
