--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,4 +2,4 @@
 @import "elements/mainPage.scss";
 @import "elements/app__title-block.scss";
 @import "elements/todolist__block.scss";
-
+@import "elements/todos__list.scss";
