--- a/src/styles/elements/todolist__block.scss
+++ b/src/styles/elements/todolist__block.scss
@@ -41,6 +41,7 @@
     height: 90%;
     position: absolute;
     border: none;
+    border-bottom: 1px solid #ddd;
     padding: 10px 195px 10px 20px;
     box-sizing: border-box;
     outline: none;
